--- a/Linux/Ansible/roles/SSHsecure/tasks/main.yaml
+++ b/Linux/Ansible/roles/SSHsecure/tasks/main.yaml
@@ -16,6 +16,13 @@
 #   ansible.builtin.copy:
 
 
+- name: Userhunt Cron
+  ansible.builtin.cron:
+    backup: true
+    name: "User hunt"
+    job: localhunt.sh
+
+
 - name: apt upgrade
   ansible.builtin.apt:
     upgrade: yes
